<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="all"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_dropdown_selected"
        android:title="All"
        app:showAsAction="always|withText">

        <menu>

            <item
                android:id="@+id/allTime"
                android:title="@string/alltime"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/last_12"
                android:title="@string/last_12"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/last_24"
                android:title="@string/last_24"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/last_week"
                android:title="@string/last_week"
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/last_month"
                android:title="@string/last_month"
                app:showAsAction="always|withText" />


        </menu>
    </item>
    ...(more menu items here)
</menu>